# iroha

./: Jenkinsfile  README.md
.github/: build-iroha1.src.yml  chatops-gen-matrix.sh
.github/workflows/: build-iroha1.yml
.jenkinsci-new/builders/: x64-linux-build-steps.groovy
deploy/ansible/playbooks/iroha-docker/: main.yml
docker/: docker-compose.yml
docs/source/api/: queries.rst
goSrc/src/vmCaller/: iroha_app_state.go  main.go
irohad/ametsuchi/: CMakeLists.txt  command_executor.hpp
irohad/ametsuchi/impl/: postgres_command_executor.cpp  postgres_command_executor.hpp  postgres_query_executor.cpp  postgres_specific_query_executor.cpp  postgres_specific_query_executor.hpp  proto_command_executor.cpp  storage_impl.cpp
irohad/main/: application.cpp  iroha_conf_loader.cpp
irohad/main/impl/: pg_connection_init.cpp
irohad/model/commands/: add_smart_contract.hpp  all.hpp  engine_call.hpp
irohad/model/converters/: json_command_factory.hpp  pb_command_factory.hpp
irohad/model/converters/impl/: json_command_factory.cpp  pb_command_factory.cpp
irohad/model/generators/: command_generator.hpp
irohad/model/generators/impl/: command_generator.cpp
irohad/model/impl/: model_operators.cpp
irohad/torii/impl/: command_service_transport_grpc.cpp
libs/common/: hexutils.hpp
scripts/: SC.sh  buildVmCaller.sh
shared_model/backend/plain/: CMakeLists.txt
shared_model/backend/protobuf/: CMakeLists.txt  proto_query_response_factory.hpp
shared_model/backend/protobuf/commands/: proto_add_smart_contract.hpp  proto_engine_call.hpp
shared_model/backend/protobuf/impl/: proto_query_response_factory.cpp
shared_model/backend/protobuf/queries/: proto_account_detail_pagination_meta.hpp  proto_account_detail_record_id.hpp
shared_model/builders/protobuf/builder_templates/: query_template.hpp  transaction_template.hpp
shared_model/interfaces/: CMakeLists.txt
shared_model/interfaces/commands/: add_smart_contract.hpp  command.hpp  command_variant.hpp  engine_call.hpp
shared_model/interfaces/commands/impl/: add_smart_contract.cpp  command.cpp
shared_model/interfaces/common_objects/: range_types.hpp  types.hpp
shared_model/interfaces/iroha_internal/: query_response_factory.hpp
shared_model/interfaces/queries/: account_detail_pagination_meta.hpp  account_detail_record_id.hpp
shared_model/interfaces/queries/impl/: account_detail_record_id.cpp  get_account_detail.cpp  query.cpp
shared_model/schema/: commands.proto  primitive.proto  qry_responses.proto  queries.proto
shared_model/validators/: field_validator.cpp  field_validator.hpp  query_validator.hpp  transaction_validator.hpp
test/framework/executor_itf/: executor_itf.cpp  executor_itf.hpp  executor_itf_helper.hpp
test/fuzzing/: find_fuzz.cpp
test/integration/acceptance/: CMakeLists.txt  add_smart_contract_test.cpp  engine_call_test.cpp  grantable_permissions_fixture.cpp  query_permission_test_acc_details.cpp  query_permission_test_ast.cpp  transfer_asset_test.cpp
test/integration/executor/: executor_fixture_param_postgres.cpp
test/load/: Dockerfile  config.env  docker-compose-graphing.yml  docker-compose.yml  docker_start.sh  locustfile-performance.py
test/load/common/: writer.py
test/module/shared_model/: command_mocks.hpp  interface_mocks.hpp  query_mocks.hpp
(+38 files in other folders)
